updated assets and fixed jumping scroll bar

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,10 +4,15 @@
     src: local("Glacial Indifference"), url(./assets/fonts/Glacial_Indifference/GlacialIndifference-Regular.otf) format("opentype");
 }
 
+html {
+    margin-left: calc(100vw - 100%);
+}
+
 .container-fluid {
     padding-left: 0;
     background-color:  #F3F5F4;
-    /* overflow-y: auto; */
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .divider {
